// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`termost > should display \`help\` 1`] = `
"[33m[33m[1m[4m
USAGE:[24m[22m[33m[39m
[37m[37m[32m[32m@examples/default[32m[37m [...options][37m[39m
[33m[33m[1m[4m
DESCRIPTION:[24m[22m[33m[39m
[37m[37mProgram description placeholder. Program name and version are retrieved from your \`package.json\`. You can override this automatic retrieval by using the \`termost({ name, description, version })\` builder form.[37m[39m
[33m[33m[1m[4m
OPTIONS:[24m[22m[33m[39m
[37m[37m  [32m[32m-h, --help        [32m[37m Display the help center[37m[39m
[37m[37m  [32m[32m-v, --version     [32m[37m Print the version[37m[39m
[37m[37m  [32m[32m-f, --flag        [32m[37m A super useful CLI flag[37m[39m"
`;

exports[`termost > should display \`help\` 2`] = `
"[33m[33m[1m[4m
USAGE:[24m[22m[33m[39m
[37m[37m[32m[32m@examples/default[32m[37m [...options][37m[39m
[33m[33m[1m[4m
DESCRIPTION:[24m[22m[33m[39m
[37m[37mProgram description placeholder. Program name and version are retrieved from your \`package.json\`. You can override this automatic retrieval by using the \`termost({ name, description, version })\` builder form.[37m[39m
[33m[33m[1m[4m
OPTIONS:[24m[22m[33m[39m
[37m[37m  [32m[32m-h, --help        [32m[37m Display the help center[37m[39m
[37m[37m  [32m[32m-v, --version     [32m[37m Print the version[37m[39m
[37m[37m  [32m[32m-f, --flag        [32m[37m A super useful CLI flag[37m[39m"
`;

exports[`termost > should display \`help\` given empty command 1`] = `
"[33m[33m[1m[4m
USAGE:[24m[22m[33m[39m
[37m[37m[32m[32m@examples/empty[32m[37m <command> [...options][37m[39m
[33m[33m[1m[4m
DESCRIPTION:[24m[22m[33m[39m
[37m[37mExample to showcase empty \`command\` fallback[37m[39m
[33m[33m[1m[4m
COMMANDS:[24m[22m[33m[39m
[37m[37m  [32m[32mbuild           [32m[37m Transpile and bundle in production mode[37m[39m
[37m[37m  [32m[32mwatch           [32m[37m Rebuild your assets on any code change[37m[39m
[33m[33m[1m[4m
OPTIONS:[24m[22m[33m[39m
[37m[37m  [32m[32m-h, --help      [32m[37m Display the help center[37m[39m
[37m[37m  [32m[32m-v, --version   [32m[37m Print the version[37m[39m"
`;

exports[`termost > should display \`help\` given empty command 2`] = `
"[33m[33m[1m[4m
USAGE:[24m[22m[33m[39m
[37m[37m[32m[32m@examples/empty build[32m[37m [...options][37m[39m
[33m[33m[1m[4m
DESCRIPTION:[24m[22m[33m[39m
[37m[37mTranspile and bundle in production mode[37m[39m
[33m[33m[1m[4m
OPTIONS:[24m[22m[33m[39m
[37m[37m  [32m[32m-h, --help      [32m[37m Display the help center[37m[39m
[37m[37m  [32m[32m-v, --version   [32m[37m Print the version[37m[39m
[37m[37m  [32m[32m--longOption    [32m[37m Useful CLI flag[37m[39m"
`;

exports[`termost > should display \`help\` given empty command 3`] = `
"[33m[33m[1m[4m
USAGE:[24m[22m[33m[39m
[37m[37m[32m[32m@examples/empty build[32m[37m [...options][37m[39m
[33m[33m[1m[4m
DESCRIPTION:[24m[22m[33m[39m
[37m[37mTranspile and bundle in production mode[37m[39m
[33m[33m[1m[4m
OPTIONS:[24m[22m[33m[39m
[37m[37m  [32m[32m-h, --help      [32m[37m Display the help center[37m[39m
[37m[37m  [32m[32m-v, --version   [32m[37m Print the version[37m[39m
[37m[37m  [32m[32m--longOption    [32m[37m Useful CLI flag[37m[39m"
`;

exports[`termost > should display \`help\` given empty command 4`] = `
"[33m[33m[1m[4m
USAGE:[24m[22m[33m[39m
[37m[37m[32m[32m@examples/empty watch[32m[37m [...options][37m[39m
[33m[33m[1m[4m
DESCRIPTION:[24m[22m[33m[39m
[37m[37mRebuild your assets on any code change[37m[39m
[33m[33m[1m[4m
OPTIONS:[24m[22m[33m[39m
[37m[37m  [32m[32m-h, --help      [32m[37m Display the help center[37m[39m
[37m[37m  [32m[32m-v, --version   [32m[37m Print the version[37m[39m"
`;

exports[`termost > should display \`version\` 1`] = `"0.0.0"`;

exports[`termost > should display \`version\` 2`] = `"0.0.0"`;

exports[`termost > should handle \`command\` api 1`] = `
"[33m[33m[1m[4m
USAGE:[24m[22m[33m[39m
[37m[37m[32m[32m@examples/command[32m[37m <command> [...options][37m[39m
[33m[33m[1m[4m
DESCRIPTION:[24m[22m[33m[39m
[37m[37mExample to showcase the \`command\` API[37m[39m
[33m[33m[1m[4m
COMMANDS:[24m[22m[33m[39m
[37m[37m  [32m[32mbuild             [32m[37m Transpile and bundle in production mode[37m[39m
[37m[37m  [32m[32mwatch             [32m[37m Rebuild your assets on any code change[37m[39m
[33m[33m[1m[4m
OPTIONS:[24m[22m[33m[39m
[37m[37m  [32m[32m-h, --help        [32m[37m Display the help center[37m[39m
[37m[37m  [32m[32m-v, --version     [32m[37m Print the version[37m[39m
[37m[37m  [32m[32m--global          [32m[37m Shared flag between commands[37m[39m"
`;

exports[`termost > should handle \`command\` api 2`] = `
"[34m[34m[1m
ℹ️  Information[22m[34m[39m
[34m[34m   👋 Hello, I'm the build command[34m[39m
[34m[34m[1m
ℹ️  Information[22m[34m[39m
[34m[34m   👉 Shared global flag = false[34m[39m
[34m[34m[1m
ℹ️  Information[22m[34m[39m
[34m[34m   👉 Local command flag = local-value[34m[39m
[34m[34m[1m
ℹ️  Information[22m[34m[39m
[34m[34m   👉 Context value = {"globalFlag":false,"localFlag":"local-value"}[34m[39m
[34m[34m[1m
ℹ️  Information[22m[34m[39m
[34m[34m   👉 Argv value = {"command":"build","operands":[],"options":{}}[34m[39m"
`;

exports[`termost > should handle \`command\` api 3`] = `
"[34m[34m[1m
ℹ️  Information[22m[34m[39m
[34m[34m   👋 Hello, I'm the watch command[34m[39m
[34m[34m[1m
ℹ️  Information[22m[34m[39m
[34m[34m   👉 Shared global flag = false[34m[39m
[34m[34m[1m
ℹ️  Information[22m[34m[39m
[34m[34m   👉 Context value = {"globalFlag":false}[34m[39m
[34m[34m[1m
ℹ️  Information[22m[34m[39m
[34m[34m   👉 Argv value = {"command":"watch","operands":[],"options":{}}[34m[39m"
`;

exports[`termost > should handle \`command\` api 4`] = `
"[34m[34m[1m
ℹ️  Information[22m[34m[39m
[34m[34m   👋 Hello, I'm the build command[34m[39m
[34m[34m[1m
ℹ️  Information[22m[34m[39m
[34m[34m   👉 Shared global flag = true[34m[39m
[34m[34m[1m
ℹ️  Information[22m[34m[39m
[34m[34m   👉 Local command flag = hello[34m[39m
[34m[34m[1m
ℹ️  Information[22m[34m[39m
[34m[34m   👉 Context value = {"globalFlag":true,"localFlag":"hello"}[34m[39m
[34m[34m[1m
ℹ️  Information[22m[34m[39m
[34m[34m   👉 Argv value = {"command":"build","operands":[],"options":{"global":true,"local":"hello"}}[34m[39m"
`;

exports[`termost > should handle \`command\` api 5`] = `
"[34m[34m[1m
ℹ️  Information[22m[34m[39m
[34m[34m   👋 Hello, I'm the watch command[34m[39m
[34m[34m[1m
ℹ️  Information[22m[34m[39m
[34m[34m   👉 Shared global flag = true[34m[39m
[34m[34m[1m
ℹ️  Information[22m[34m[39m
[34m[34m   👉 Context value = {"globalFlag":true}[34m[39m
[34m[34m[1m
ℹ️  Information[22m[34m[39m
[34m[34m   👉 Argv value = {"command":"watch","operands":[],"options":{"global":true}}[34m[39m"
`;

exports[`termost > should handle \`command\` api 6`] = `
"[33m[33m[1m[4m
USAGE:[24m[22m[33m[39m
[37m[37m[32m[32m@examples/command build[32m[37m [...options][37m[39m
[33m[33m[1m[4m
DESCRIPTION:[24m[22m[33m[39m
[37m[37mTranspile and bundle in production mode[37m[39m
[33m[33m[1m[4m
OPTIONS:[24m[22m[33m[39m
[37m[37m  [32m[32m-h, --help        [32m[37m Display the help center[37m[39m
[37m[37m  [32m[32m-v, --version     [32m[37m Print the version[37m[39m
[37m[37m  [32m[32m--global          [32m[37m Shared flag between commands[37m[39m
[37m[37m  [32m[32m--local           [32m[37m Local command flag[37m[39m"
`;

exports[`termost > should handle \`command\` api 7`] = `
"[33m[33m[1m[4m
USAGE:[24m[22m[33m[39m
[37m[37m[32m[32m@examples/command watch[32m[37m [...options][37m[39m
[33m[33m[1m[4m
DESCRIPTION:[24m[22m[33m[39m
[37m[37mRebuild your assets on any code change[37m[39m
[33m[33m[1m[4m
OPTIONS:[24m[22m[33m[39m
[37m[37m  [32m[32m-h, --help        [32m[37m Display the help center[37m[39m
[37m[37m  [32m[32m-v, --version     [32m[37m Print the version[37m[39m
[37m[37m  [32m[32m--global          [32m[37m Shared flag between commands[37m[39m"
`;

exports[`termost > should handle \`option\` api 1`] = `
"[34m[34m[1m
ℹ️  Information[22m[34m[39m
[34m[34m   {
  "optionWithAlias": 0,
  "optionWithoutAlias": "defaultValue"
}[34m[39m"
`;

exports[`termost > should handle \`task\` api 1`] = `
"[33m❯[39m Task with returned value (persisted)
[32m✔[39m Task with returned value (persisted)
[33m❯[39m Task with side-effect only (no persisted value)
[32m✔[39m Task with side-effect only (no persisted value)
[33m❯[39m Task can also access other persisted task values
[32m✔[39m Task can also access other persisted task values
[33m❯[39m Or even execute external commands thanks to its provided helpers
[32m✔[39m Or even execute external commands thanks to its provided helpers
[33m❯[39m A task can have a dynamic label generated from contextual values: small
[32m✔[39m A task can have a dynamic label generated from contextual values: small
[34m[34m[1m
ℹ️  Label & console output[22m[34m[39m
[34m[34m   If you don't specify a label, the handler is executed in "live mode" (the output is not hidden by the label and is displayed gradually).[34m[39m
[34m[34m[1m
ℹ️  Context management[22m[34m[39m
[34m[34m   A task with a specified "key" can be retrieved here. Size = 45. If no "key" was specified the task returned value cannot be persisted across program instructions.[34m[39m
[34m[34m[1m
ℹ️  Output formatting[22m[34m[39m
[34m[34m   The \`message\` helpers can be used to display task content in a nice way[34m[39m
[32m[32m[1m
✅ Success[22m[32m[39m
[32m[32m   The \`message\` helpers can be used to display task content in a nice way[32m[39m
[34m[34m[1m
ℹ️  👋 You can also customize the label[22m[34m[39m
[34m[34m   The \`message\` helpers can be used to display task content in a nice way[34m[39m
[34m[34m[1m
ℹ️  👋 You can also customize the label[22m[34m[39m
[34m[34m   I support also[34m[39m
[34m[34m   multilines[34m[39m
[34m[34m   with array input[34m[39m
[37m[37m[3m[9m[1m
You can also have a total control on the formatting through the \`format\` helper.[22m[29m[23m[37m[39m
{
  "size": 45,
  "computedFromOtherTaskValues": "small",
  "execOutput": "Hello from shell"
}"
`;
